--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <style>
       @import url(game.css);
     </style>
+    <audio
+      src="/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3"
+      autoplay
+    ></audio>
   </head>
   <body>
     <div id="game-board"></div>
