A lot of refactoring it is currently a mess

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="game-board"></div>
-    <script type="text/javascript" src="game.js" defer></script>
+    <script src="game.js" type="module"></script>
   </body>
 </html>
