--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
       @import url(game.css);
     </style>
   </head>
   <body>
-    <div id="game-board"></div>
+    <div id="game-board" data-id="game-board"></div>
     <script src="game.js" type="module"></script>
   </body>
 </html>
